# Knoodle

./: .gitattributes  .gitignore  .gitmodules  CITATION.cff  Doxyfile  INSTALLATION_GUIDE.txt  INSTALL_HPC_MODULES.sh  Knoodle.hpp  KnotTools.hpp  LICENSE  README.md  ReAPr.hpp  Reapr.hpp  Reapr_Legacy.hpp
CrossingSimplifier_b/: R_I.hpp  R_II.hpp  R_II_Vertical.hpp  R_IIa_Horizontal.hpp  R_IIa_Vertical.hpp  R_Ia_Horizontal.hpp  TwistMove.hpp
DevCLP/: main.cpp
Dev_CLP/: main.cpp
Dev_ClisbyTree/: main.cpp
Dev_ClisbyTree2/: compile.sh  main.cpp
Dev_Ortho/: main.cpp
Dev_OrthoDraw/: compile.sh  main.cpp
Dev_OrthoDrawing/: main.cpp
Dev_OrthogonalRepresentation/: main.cpp
Dev_PlanarDiagram/: main.cpp
Dev_PlanarDiagram2/: main.cpp
Dev_PlanarityChecker/: main.cpp
Example_Knoodle/: ExampleKnot.tsv  compile.sh  compile2.sh  compile_gcc.sh  main.cpp
Hide/: PlanarDiagramCollection.hpp
Knoodle.xcodeproj/: project.pbxproj
KnoodleTool/: Makefile  compile.sh  compile_without_boost+umfpack.sh  main.cpp
KnotTools.xcodeproj/: project.pbxproj
PolyFold/: compile.sh  (+5 more)
python/: README.md  pyproject.toml  setup.py  test_knots.py  test_link_invariants.py  test_lookup.py
python/fixtures/snappy_tables/: Klut_Values_03.tsv  Klut_Values_04.tsv  Klut_Values_05.tsv  Klut_Values_06.tsv  Klut_Values_07.tsv  Klut_Values_08.tsv  Klut_Values_09.tsv  Klut_Values_10.tsv
python/knoodle/: __init__.py
python/src/: bindings.cpp  bindings.h  linux_compat.hpp  umfpack_compat.hpp  wrapper.cpp
python/tablegen/: .gitignore  make_tables.py  name_knots.py  plantri_shadows.py
(+3309 files in other folders)
